rgbds-0.6.1/test/asm/expand-empty-string.err
error: expand-empty-string.asm(6) -> expand-empty-string.asm::test(4):
    syntax error, unexpected number
error: Assembly aborted (1 error)!
